# gruff-py

./: .editorconfig  .gitattributes  .gitignore  .gruff-py.yaml  .gruff.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json  pyproject.toml
.agents/: hooks.json
.claude/: settings.json
.claude/hooks/: deny-dangerous.self-test.sh
.claude/skills/goat/: SKILL.md
.claude/skills/goat-debug/: SKILL.md
.claude/skills/goat-review/: SKILL.md
.codex/: config.toml
.codex/hooks/: gruff-code-quality.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  git-commit-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md
.github/skills/goat/: SKILL.md
.github/skills/goat-critique/: SKILL.md
.github/skills/goat-plan/: SKILL.md
.github/skills/goat-qa/: SKILL.md
.github/skills/goat-security/: SKILL.md
.github/workflows/: ci.yml  publish.yml
.goat-flow/: architecture.md  code-map.md  config.yaml  glossary.md
.goat-flow/decisions/: ADR-002-size-line-counting.md  ADR-003-cognitive-complexity.md  ADR-003a-composite-fingerprint.md  ADR-004-naming-pillar-boundary.md  ADR-005-docstring-style-detection.md  ADR-006-cross-impl-config-shape.md  ADR-007-gitignore-aware-source-discovery.md  ADR-008-rule-suppression-syntax.md  ADR-009-rule-profiles-and-confidence-filtering.md  ADR-010-quality-gates-and-score-ratings.md  ADR-011-finding-metadata-extensions.md  ADR-013-sarif-renderer-contract.md  ADR-015-dead-code-allowlist.md  ADR-016-composite-finding-fingerprint-inputs.md  ADR-017-security-taint-lite-posture.md  ADR-018-retire-naming-parameter-type-name.md  ADR-019-per-command-minimum-severity.md  ADR-021-reviewability-profile.md  ADR-024-retire-god-method-composite.md
.goat-flow/footguns/: baseline.md  cli.md  compatibility.md  config.md  docs.md  packaging.md  rules.md  setup.md  source.md
.goat-flow/hooks/: deny-dangerous.sh  gruff-code-quality.sh
.goat-flow/hooks/deny-dangerous/: deny-dangerous-self-test.sh  patterns-shell.sh
.goat-flow/learning-loop/decisions/: ADR-004-naming-pillar-boundary.md  ADR-007-gitignore-aware-source-discovery.md  ADR-012-plugin-boundary-through-v0-1.md  ADR-014-single-severity-threshold-rubrics.md  ADR-020-stable-identity-field.md  ADR-022-reviewer-verification-mission.md  ADR-023-config-ignore-authority-and-check-ignore.md  ADR-025-project-rule-scope-honesty.md  INDEX.md
.goat-flow/learning-loop/footguns/: INDEX.md  README.md  baseline.md  cli.md  compatibility.md  docs.md  packaging.md  rules.md  source.md
.goat-flow/learning-loop/lessons/: INDEX.md  README.md  setup.md  verification.md  workflow.md
.goat-flow/learning-loop/patterns/: INDEX.md  README.md  rules.md
.goat-flow/lessons/: setup.md  verification.md  workflow.md
.goat-flow/patterns/: configuration.md  error-handling.md  performance.md  rules.md
.goat-flow/skill-docs/: README.md  skill-conventions.md  skill-preamble.md
.goat-flow/skill-docs/playbooks/: README.md  browser-use.md  changelog.md  code-comments.md  gruff-code-quality.md  observability.md  page-capture.md  release-notes.md
.goat-flow/skill-docs/skill-quality-testing/: README.md  adversarial-framing.md  deployment.md  tdd-iteration.md
docs/: CONFIGURATION.md  DASHBOARD.md  README.md  RELEASING.md  REPORTING.md  RULES.md  agent-hook.md  ci-integration.md  configuration.md  dashboard.md  explain.md  mission.md  output-formats.md  releasing.md  reporting.md  rules.md  triage.md
docs/coding-standards/: git-commit.md
scripts/: bump-version.sh  dependency-install.sh  dependency-update.sh  preflight-checks.sh  publish-pypi.sh  test-performance.sh
scripts/performance-baselines/: linux-x86_64.json
src/gruff/: __init__.py  __main__.py  cli.py  version.py
src/gruff/analysis/: __init__.py  report.py  run_diagnostic.py  runner.py  schema.py
src/gruff/command/: __init__.py  dashboard_page_renderer.py  dashboard_server.py  metric_calibration.py
src/gruff/config/: __init__.py  analysis_config.py  loader.py  rule_selection.py  rule_settings.py  yaml_loader.py
src/gruff/finding/: __init__.py  confidence.py  fail_threshold.py  finding.py  output_format.py  pillar.py  rule_tier.py  severity.py
src/gruff/parser/: __init__.py  analysis_unit.py  python_parser.py
src/gruff/reporting/: __init__.py  finding_display_filter.py  github_annotations_reporter.py  hotspot_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py  text_reporter.py
src/gruff/rule/: __init__.py  _python_dynamism.py  context.py  definition.py  project_rule.py  registry.py  rule.py
src/gruff/scoring/: __init__.py  composite_finding_factory.py  file_score.py  grade.py  pillar_score.py  score_calculator.py  score_report.py
src/gruff/source/: __init__.py  discovery.py  gitignore.py  source_file.py
src/gruffpy/: __init__.py  __main__.py  cli.py  cli_dashboard.py  cli_hook.py  cli_list_rules.py  cli_menu.py  cli_migrate_config.py  cli_options.py  cli_state.py  cli_summary.py  hook_contract.py  version.py
src/gruffpy/analysis/: __init__.py  analysis_run_request.py  baseline.py  report.py  (+4 more)
tests/integration/: test_bin_script.py  test_check_ignore.py  test_cli_smoke.py  test_dashboard_server.py  test_gitignore_e2e.py  test_hook_contract.py  test_json_byte_equivalence.py  test_perf_script_smoke.py  test_suppression.py
(+531 files in other folders)
